commit isaias viado